k8s/apps/golink/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: golink
  labels:
    app: golink
