k8s/apps/golink/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: golink-service
  namespace: golink
  labels:
    app: golink
spec:
  type: ClusterIP
  selector:
    app: golink
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
